seprate the core dependency UI

--- a/scheduler.ui/.settings/org.eclipse.wst.common.component
+++ b/scheduler.ui/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="scheduler.core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Scheduler-core/Scheduler-core">
+        <dependent-module archiveName="netty-socketio-1.7.14-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/netty-socketio/netty-socketio">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/scheduler-ui/target/classes"/>
